[package]
name = "dreampipe"
version = "0.1.0"
edition = "2024"

[features]
expanding = []

[dependencies]
cef = { version = "143.1.0", features = ["accelerated_osr", "wgpu"] }
colpetto = "0.6.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
drm = "0.14.1"
euclid = "0.22.11"
futures = "0.3.31"
futures-io = "0.3.31"
gbm = "0.18.0"
gbm-sys = "0.4.0"
image = "0.25.8"
libc = "0.2.177"
libloading = "0.8.9"
microxdg = "0.2.0"
nix = "0.30.1"
notify = { version = "8.2.0", features = ["crossbeam-channel"] }
pipewire = { git = "https://gitlab.freedesktop.org/pipewire/pipewire-rs.git" }
pipewire-sys = { git = "https://gitlab.freedesktop.org/pipewire/pipewire-rs.git" }
rand = "0.9.2"
taffy = "0.9.2"
tracing = "0.1.41"
wgpu = "27.0.1"
